--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 0rem;
   text-align: center;
 }
 
@@ -39,4 +39,10 @@
 
 .read-the-docs {
   color: #888;
+}
+img{
+  /* object-fit: contain; */
+  width: 300px;
+  height: 300px;
+
 }
