--- a/src/index.css
+++ b/src/index.css
@@ -24,9 +24,10 @@ a:hover {
 
 body {
   margin: 0;
+  padding-top: 0;
   display: flex;
-  place-items: center;
-  min-width: 320px;
+  /* place-items: center; */
+  min-width: 100vw;
   min-height: 100vh;
 }
 
